fix the accordian body overflow content

--- a/scss/_accordion.scss
+++ b/scss/_accordion.scss
@@ -118,7 +118,9 @@
 }
 
 .accordion-body {
+  max-height: 50vh;
   padding: var(--#{$prefix}accordion-body-padding-y) var(--#{$prefix}accordion-body-padding-x);
+  overflow-y: auto;
 }
 
 
